kubernetes/sample-apps/colorapp/create-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment-blue
  namespace: blue-app
spec:
  selector:
    matchLabels:
      app: blue
  replicas: 2
  template:
    metadata:
      labels:
        app: blue
    spec:
      containers:
      - name: webapp
        image: ritexlabs/colorapp:1.0.0
        ports:
        - containerPort: 8080
