kubernetes/sample-apps/colorapp/create-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: service-blue
  namespace: blue-app
spec:
  selector:
    app: blue
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: NodePort
