kubernetes/sample-apps/colorapp/create-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-blue
  namespace: blue-app
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:  
  rules:
    - http:
        paths:
        - path: /blue
          pathType: Prefix
          backend:
            service:
              name: service-blue
              port:
                number: 80
